--- a/MVCMovie/appsettings.json
+++ b/MVCMovie/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MVCMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MVCMovieContext-c76cc3f3-d2c1-4b40-9011-046e5a5193a0;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
